--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Simnibs Cifti Tools 
-theme: mkdocs
+theme: readthedocs
 pages:
 - Project Overview: project_overview.md 
 - System Requirements: system_requirements.md 
