--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ pages:
 - Project Overview: project_overview.md 
 - System Requirements: system_requirements.md 
 - Preparation Overview: prep_overview.md 
-- Usage: usage.md
+- Efield_generator: Efield_generator.md
 - Outputs: outputs.md
 - Known Issues: known_issues.md
 - Contributors: contributors.md
