added other functions

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ pages:
 - System Requirements: system_requirements.md 
 - Preparation Overview: prep_overview.md 
 - Efield Generator: Efield_generator.md
+- Other fuctions: other_functions.md 
 - Outputs: outputs.md
 - Known Issues: known_issues.md
 - Contributors: contributors.md
