--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,8 +7,9 @@ pages:
 - Project Overview: project_overview.md 
 - System Requirements: system_requirements.md 
 - Preparation Overview: prep_overview.md 
-- Efield Generator: Efield_generator.md
-- Other fuctions: other_functions.md 
+- Simnibs Cifti Tools Pipeline: 
+    - Efield Generator: Efield_generator.md
+    - Other Fuctions: other_functions.md 
 - Outputs: outputs.md
 - Known Issues: known_issues.md
 - Contributors: contributors.md
