--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,5 +10,7 @@ nav:
 - Efield Generator: Efield_generator.md
 - Utilities: Utilities.md 
 - Outputs: outputs.md
+- FAQ: FAQ.md
+- Coming Next: coming_next.md
 - Known Issues: known_issues.md
 - Contributors: contributors.md
