--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,6 @@ nav:
 - Utilities: Utilities.md 
 - Outputs: outputs.md
 - FAQ: FAQ.md
-- Coming Next: coming_next.md
 - Known Issues: known_issues.md
+- Coming Soon: coming_soon.md
 - Contributors: contributors.md
