--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,15 +1,9 @@
-site_name: Simnibs Cifti Tools 
-theme: material
+version: 2
 
-plugins:
-    - search
-nav:
-- Project Overview: project_overview.md 
-- Installation and set-up: Installation and set-up.md 
-- Dependencies: dependancies.md
-- Efield Generator: Efield_generator.md
-- Utilities: Utilities.md 
-- FAQ: FAQ.md
-- Known Issues: known_issues.md
-- Coming Soon: coming_soon.md
-- Contributors: contributors.md
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
+
+mkdocs:
+  configuration: mkdocs.yml
