--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,9 +2,10 @@ site_name: Simnibs Cifti Tools
 theme: 
   name: material
   features:
-    - navigation.tabs       # Adds top-level navigation tabs
+    # - navigation.tabs       # Adds top-level navigation tabs
     - navigation.sections   # Group navigation into sections
     - content.code.copy     # Adds a copy button to code blocks
+    - navigation.expand     # Optional: Keeps the sidebar sections expanded by default
 
 plugins:
   - search
