Updates to align with proposed outline as well as renaming documents.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,12 +42,12 @@ nav:
   - Modularized Tools: Utilities.md 
   - Tutorials: default_example.md
   - Troubleshooting: troubleshooting.md
-  - Coming Soon: coming_soon.md
   - Contributors: contributors.md
 
   # - Required Imaging Files: dependancies.md
   # - Usage: useage.md
   # - Efield Generator: Efield_generator.md
   # - FAQ: FAQ.md
-
+  # - Coming Soon: coming_soon.md
+ 
 
